End Desktop Version

--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                     <p>AIR POLLUTION</p>
                 </div>
                 <div id="search-container">
-                    <form action="javascript:;" id="search-form">
+                    <form id="search-form">
                         <input id="city-in" type="text" name="searchCity" placeholder="City Name" required>
-                        <button id="search-btn" type="submit" value="search">Search</button>
+                        <button id="search-btn" value="search">Search</button>
                     </form>
                 </div>
                 <ul id="menu">
+                    <li><a id="myposition"><i class="fas fa-map-marked-alt"></i> Use My Position</a></li>
                     <li><a href="www.google.it">See GitHub Docs</a></li>
                 </ul>
             </header>
