--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </section>
 
             <footer id="footer">
-                <p>Desing & Dev By Nicolas Ricardi for Start2Impact</p>
+                <p>Design & Dev By Nicolas Ricardi for Start2Impact</p>
             </footer>
 
         </main>
