--- a/index.html
+++ b/index.html
@@ -2,11 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" type="text/css" />
+    <title>Nicolas Ricardi - Air Pollution App</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" integrity="sha512-SJw7jzjMYJhsEnN/BuxTWXkezA2cRanuB8TdCNMXFJjxG9ZGSKOX5P3j03H6kdMxalKHZ7vlBMB4CagFP/de0A==" crossorigin="anonymous" type="text/css"/>
+
+    <!-- Meta -->
+    <meta name="title" content="Nicolas Ricardi - Air Pollution App">   
+    <meta name="description" content="See pollution index in the cities around the world." />
+    <meta name="keywords" content="Air Pollution Index, Air Pollution app" />
+    <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Nicolas Ricardi - Air Pollution App">
+    <meta name="twitter:description" content="See pollution index in the cities around the world.">
+    <meta name="twitter:site" content="https://eager-neumann-565bb7.netlify.app/" />
+    <meta name="twitter:creator" content="@nick_ricardi00" />
+    <meta name="twitter:image" content="https://www.nicolasricardi.com/assets/images/air-pollution.png">
+    
+    <!-- OpenGraph -->
+    <meta property="og:title" content="Nicolas Ricardi - Air Pollution App" />
+    <meta property="og:description" content="See pollution index in the cities around the world." />
+    <meta name="og:author" content="Nicolas Ricardi">
+    <meta property="og:site_name" content="Air Pollution App">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://eager-neumann-565bb7.netlify.app/" />
+    <meta property="og:image" content="https://www.nicolasricardi.com/assets/images/air-pollution.png" />
 </head>
 
 <body>
@@ -27,8 +53,8 @@
                     </form>
                 </div>
                 <ul id="menu">
-                    <li><a id="myposition"><i class="fas fa-map-marked-alt"></i> Use My Position</a></li>
-                    <li><a href="www.google.it">See GitHub Docs</a></li>
+                    <li><a id="myposition" class="hvr-underline-from-left"><i class="fas fa-map-marked-alt"></i> Use My Position</a></li>
+                    <li><a href="https://github.com/NickEagle2400/air-pollution" class="hvr-underline-from-left">See GitHub Docs</a></li>
                 </ul>
             </header>
 
@@ -104,7 +130,7 @@
             </section>
 
             <footer id="footer">
-                <p>Design & Dev By Nicolas Ricardi for Start2Impact</p>
+                <p>Design & Dev By <a href="https://www.nicolasricardi.com">Nicolas Ricardi</a> for Start2Impact</p>
             </footer>
 
         </main>
