--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     </form>
                 </div>
                 <ul id="menu">
-                    <li><a id="myposition" class="hvr-underline-from-left"><i class="fas fa-map-marked-alt"></i> Use My Position</a></li>
-                    <li><a href="https://github.com/NickEagle2400/air-pollution" class="hvr-underline-from-left">See GitHub Docs</a></li>
+                    <li><a id="myposition"><i class="fas fa-map-marked-alt"></i> Use My Position</a></li>
+                    <li><a href="https://github.com/NickEagle2400/air-pollution">See GitHub Docs</a></li>
                 </ul>
             </header>
 
